Bug 443267 - Renaming current session causes crash
Summary: Renaming current session causes crash
Status: RESOLVED FIXED
Alias: None
Product: kate
Classification: Applications
Component: sessions (other bugs)
Version First Reported In: 21.08.1
Platform: Arch Linux Linux
: NOR normal
Target Milestone: ---
Assignee: KWrite Developers
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2021-10-03 17:51 UTC by Dominik Kummer
Modified: 2021-10-09 21:22 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 21.12.0
Sentry Crash Report:


Attachments
Drkonqi crash info (3.36 KB, text/vnd.kde.kcrash-report)
2021-10-03 17:51 UTC, Dominik Kummer
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Dominik Kummer 2021-10-03 17:51:24 UTC
Created attachment 142127 [details]
Drkonqi crash info

STEPS TO REPRODUCE
1. Open session manager
2. Rename current session

OBSERVED RESULT
Kate crashes

EXPECTED RESULT
Rename current session

SOFTWARE/OS VERSIONS
Windows: 
macOS: 
Linux/KDE Plasma: 
(available in About System)
KDE Plasma Version: 
KDE Frameworks Version: 
Qt Version: 

ADDITIONAL INFORMATION
Comment 1 Christoph Cullmann 2021-10-03 20:26:39 UTC
Git commit 7f4c60e23062ab4ffe152385f18ceb77fdf81ea5 by Christoph Cullmann.
Committed on 03/10/2021 at 20:26.
Pushed by cullmann into branch 'master'.

avoid crash on session rename

delay update of list out of signal/slot chain

M  +6    -4    kate/session/katesessionmanagedialog.cpp

https://invent.kde.org/utilities/kate/commit/7f4c60e23062ab4ffe152385f18ceb77fdf81ea5
Comment 2 Christoph Cullmann 2021-10-09 21:22:32 UTC
Git commit c2ca7aa3288f791ce4a66add5e0c5d8929631872 by Christoph Cullmann.
Committed on 09/10/2021 at 21:21.
Pushed by cullmann into branch 'lsp2clipboard'.

avoid crash on session rename

delay update of list out of signal/slot chain

M  +6    -4    kate/session/katesessionmanagedialog.cpp

https://invent.kde.org/utilities/kate/commit/c2ca7aa3288f791ce4a66add5e0c5d8929631872