avoid crash on session rename

delay update of list out of signal/slot chain

BUG: 443267